--- a/bootstrap_sandbox_starter/2_7_sizing.html
+++ b/bootstrap_sandbox_starter/2_7_sizing.html
@@ -135,12 +135,12 @@
 
         <!-- BORDER RADIUS -->
         <div class="border rounded p-3 mb-2 bg-light">Rounded</div>
-        <div class="p-3 mb-2 bg-light">Rounded Top</div>
-        <div class="p-3 mb-2 bg-light">Rounded Bottom</div>
-        <div class="p-3 mb-2 bg-light">Rounded Right</div>
-        <div class="p-3 mb-2 bg-light">Rounded Left</div>
-        <div class="p-3 mb-2 bg-light">Rounded Circle</div>
-        <div class="p-3 mb-2 bg-light">Dark</div>
+        <div class="border rounded-top p-3 mb-2 bg-light">Rounded Top</div>
+        <div class="border rounded-bottom p-3 mb-2 bg-light">Rounded Bottom</div>
+        <div class="border rounded-right p-3 mb-2 bg-light">Rounded Right</div>
+        <div class="border rounded-left p-3 mb-2 bg-light">Rounded Left</div>
+        <div class="border rounded-circle p-3 mb-2 bg-light">Rounded Circle</div>
+        <div class="border rounded-0 p-3 mb-2 bg-light">Dark</div>
 
     </div>
     <!-- ./container -->
