--- a/bootstrap_sandbox_starter/3_9_cards.html
+++ b/bootstrap_sandbox_starter/3_9_cards.html
@@ -88,8 +88,8 @@
         <!--#####################START HERE#####################-->
 
         <!-- BLOCK -->
-        <div>
-            <div>
+        <div class="card">
+            <div class="card-body">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, voluptate.
             </div>
         </div>
@@ -98,12 +98,12 @@
         <br>
 
         <!-- SIMPLE CARD -->
-        <div>
-            <div>
-                <h4>Card Title</h4>
-                <h6>Card subtitle</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, quas.</p>
-                <a href="#">Read More</a>
+        <div class="card" style="width: 20rem;">
+            <div class="card-body">
+                <h4 class="card-title">Card Title</h4>
+                <h6 class="card-subtitle text-muted">Card subtitle</h6>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, quas.</p>
+                <a class="btn btn-outline-primary" href="#">Read More</a>
             </div>
         </div>
 
@@ -111,12 +111,12 @@
         <br>
 
         <!-- CARD WITH IMAGE -->
-        <div>
-            <img src="https://source.unsplash.com/random/300x200" alt="">
-            <div>
-                <h4>Card Title</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, quas.</p>
-                <a href="#">Read More</a>
+        <div class="card" style="width: 20rem;">
+            <img class="card-img-top" src="https://source.unsplash.com/random/300x200" alt="">
+            <div class="card-body">
+                <h4 class="card-title">Card Title</h4>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, quas.</p>
+                <a class="btn btn-outline-primary btn-block" href="#">Read More</a>
             </div>
         </div>
 
@@ -124,14 +124,14 @@
         <br>
 
         <!-- CARD WITH HEADER -->
-        <div>
-            <div>
+        <div class="card" style="width: 20rem;">
+            <div class="card-header">
                 My Card
             </div>
-            <div>
-                <h4>Card Title</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, perspiciatis.</p>
-                <a href="#">Read More</a>
+            <div class="card-body">
+                <h4 class="card-title">Card Title</h4>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, perspiciatis.</p>
+                <a class="btn btn-success btn-block" href="#">Read More</a>
             </div>
         </div>
 
@@ -139,16 +139,16 @@
         <br>
 
         <!-- HEADER, FOOTER, CENTERED -->
-        <div>
-            <div>
+        <div class="card text-center" style="width: 20rem;">
+            <div class="card-header">
                 My Card
             </div>
-            <div>
-                <h4>Card Title</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, perspiciatis.</p>
-                <a href="#">Read More</a>
+            <div class="card-body">
+                <h4 class="card-title">Card Title</h4>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, perspiciatis.</p>
+                <a class="btn btn-danger btn-block" href="#">Read More</a>
             </div>
-            <div>
+            <div class="card-footer text-muted">
                 2 Days Ago
             </div>
         </div>
@@ -157,8 +157,8 @@
         <br>
 
         <!-- CARD WITH NAV -->
-        <div>
-            <div>
+        <div class="card">
+            <div class="card-navigation">
                 <ul>
                     <li>
                         <a href="#">Active</a>
