--- a/looplab/index.html
+++ b/looplab/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/style.css">
     <title>LoopLAB</title>
 </head>
-<body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+<body data-spy="scroll" data-target="#main-nav" id="home">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" id="main-nav">
         <div class="container">
             <a href="index.html" class="navbar-brand">LoopLAB</a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -95,12 +95,212 @@
             </div>
         </div>
     </header>
+
+    <!-- EXPLORE HEAD -->
+    <section id="explore-head-section">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center py-5">
+                    <h1 class="display-4">Explore</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, impedit unde quo temporibus, fuga provident architecto ullam beatae, similique recusandae iure illum magnam? Earum, reiciendis voluptatibus quod adipisci provident doloremque dolorum dicta eaque. Illum possimus alias magni eum consequuntur dignissimos.</p>
+                    <a href="#" class="btn btn-outline-secondary">Find out more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- EXPLORE SECTION -->
+    <section id="explore-section" class="bg-light text-muted py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="img/explore-section1.jpg" alt="" class="img-fluid mb-3 rounded-circle">
+                </div>
+                <div class="col-md-6">
+                    <h3>Explore and Connect</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis magnam accusantium voluptatem enim explicabo ad repudiandae quo aspernatur expedita itaque.</p>
+                    <div class="d-flex">
+                        <div class="p-4 align-self-start">
+                            <i class="fas fa-check fa-2x"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias corrupti, aut atque odio accusantium minus.</p>
+                        </div>
+                    </div>
+                    <div class="d-flex">
+                        <div class="p-4 align-self-start">
+                            <i class="fas fa-check fa-2x"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias corrupti, aut atque odio accusantium minus.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- CREATE HEAD -->
+    <section id="create-head-section" class="bg-primary">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center py-5 text-white">
+                    <h1 class="display-4">Create</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, impedit unde quo temporibus, fuga provident architecto ullam beatae, similique recusandae iure illum magnam? Earum, reiciendis voluptatibus quod adipisci provident doloremque dolorum dicta eaque. Illum possimus alias magni eum consequuntur dignissimos.</p>
+                    <a href="#" class="btn btn-outline-light">Find out more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Create SECTION -->
+    <section id="create-section" class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h3>Create Your Passion</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis magnam accusantium voluptatem enim explicabo ad repudiandae quo aspernatur expedita itaque.</p>
+                    <div class="d-flex">
+                        <div class="p-4 align-self-start">
+                            <i class="fas fa-check fa-2x"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias corrupti, aut atque odio accusantium minus.</p>
+                        </div>
+                    </div>
+                    <div class="d-flex">
+                        <div class="p-4 align-self-start">
+                            <i class="fas fa-check fa-2x"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias corrupti, aut atque odio accusantium minus.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <img src="img/create-section1.jpg" alt="" class="img-fluid mb-3 rounded-circle">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- SHARE HEAD -->
+    <section id="share-head-section" class="bg-primary">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center py-5">
+                    <h1 class="display-4">Share</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, impedit unde quo temporibus, fuga provident architecto ullam beatae, similique recusandae iure illum magnam? Earum, reiciendis voluptatibus quod adipisci provident doloremque dolorum dicta eaque. Illum possimus alias magni eum consequuntur dignissimos.</p>
+                    <a href="#" class="btn btn-outline-light">Find out more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- SHARE SECTION -->
+    <section id="share-section" class="bg-light text-muted py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="img/share-section1.jpg" alt="" class="img-fluid mb-3 rounded-circle">
+                </div>
+                <div class="col-md-6">
+                    <h3>Share what you create</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis magnam accusantium voluptatem enim explicabo ad repudiandae quo aspernatur expedita itaque.</p>
+                    <div class="d-flex">
+                        <div class="p-4 align-self-start">
+                            <i class="fas fa-check fa-2x"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias corrupti, aut atque odio accusantium minus.</p>
+                        </div>
+                    </div>
+                    <div class="d-flex">
+                        <div class="p-4 align-self-start">
+                            <i class="fas fa-check fa-2x"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias corrupti, aut atque odio accusantium minus.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer id="main-footer" class="bg-dark">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center py-4">
+                    <h3>LoopLAB</h3>
+                    <p>Copyright &copy; <span id="year"></span></p>
+                    <button class="btn btn-primary" data-toggle="modal" data-target="#contact-modal">Contact Us</button>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- CONTACT MODAL -->
+    <div class="modal fade text-dark" id="contact-modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Contact Us</h5>
+                    <button class="close" data-dismiss="modal">
+                        <span>&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form action="">
+                        <div class="formgroup">
+                            <label for="name">Name</label>
+                            <input type="text" class="form-control">
+                        </div>
+                        <div class="formgroup">
+                            <label for="email">Email</label>
+                            <input type="email" class="form-control">
+                        </div>
+                        <div class="formgroup">
+                            <label for="message">Message</label>
+                            <textarea class="form-control"></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-primary btn-block">Sumbit</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
     <script>
         $('#year').text(new Date().getFullYear())
+
+        // Init Scrollspy
+        $('body').scrollspy({target: '#main-nav'})
+
+        // Add smooth scrolling
+        $('#main-nav a').on('click', function(e) {
+        // Check for a hash value
+        if(this.hash !== '') {
+            e.preventDefault();
+
+            // Store hash
+            const hash = this.hash;
+
+            // Animate smooth scroll
+            $('html, body').animate({
+            scrollTop: $(hash).offset().top
+            }, 900, function() {
+            window.location.hash = hash
+            });
+        }
+        });
     </script>
 </body>
 </html>
